// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass the actions to the consumer 1`] = `
<Component>
  <Component>
    <span>
      world
    </span>
    <button
      onClick={[Function]}
    />
  </Component>
</Component>
`;

exports[`should pass the actions to the consumer 2`] = `
<Component>
  <Component>
    <span>
      world!
    </span>
    <button
      onClick={[Function]}
    />
  </Component>
</Component>
`;

exports[`should pass the state to a stateful component using a hoc 1`] = `
<Component>
  <Component
    test="prop"
  >
    <Component>
      <Component
        append={[Function]}
        hello="world!"
        test="prop"
      >
        <span>
          prop
        </span>
        <span>
          world!
        </span>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`should pass the state to a stateless component using a hoc 1`] = `
<Component>
  <Component
    test="prop"
  >
    <Component>
      <Component
        append={[Function]}
        hello="world"
        test="prop"
      >
        <span>
          prop
        </span>
        <span>
          world
        </span>
        <button
          onClick={[Function]}
        />
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`should return the updated state 1`] = `
Object {
  "hello": "world!",
  "test": 0,
}
`;

exports[`should return the updated state 2`] = `
Object {
  "hello": "world!",
  "test": 1,
}
`;

exports[`should update the store 1`] = `
<Component>
  <Component>
    world
  </Component>
</Component>
`;

exports[`should update the store 2`] = `
<Component>
  <Component>
    world!
  </Component>
</Component>
`;

exports[`should update the store as event handler 1`] = `
<Component>
  <Component>
    <span>
      world
    </span>
    <button
      onClick={[Function]}
    />
  </Component>
</Component>
`;

exports[`should update the store as event handler 2`] = `
<Component>
  <Component>
    <span>
      world!
    </span>
    <button
      onClick={[Function]}
    />
  </Component>
</Component>
`;

exports[`should update the store asynchronously 1`] = `
<Component>
  <Component>
    0
  </Component>
</Component>
`;

exports[`should update the store asynchronously 2`] = `
<Component>
  <Component>
    1
  </Component>
</Component>
`;
